Fixes and improvements

--- a/config/crd/bases/chaos-mesh.org_testwickchaos.yaml
+++ b/config/crd/bases/chaos-mesh.org_testwickchaos.yaml
@@ -224,7 +224,7 @@ spec:
               provisionerURL:
                 type: string
               samples:
-                type: integer
+                type: string
               size:
                 type: string
             type: object
