--- a/manifests/crd-v1beta1.yaml
+++ b/manifests/crd-v1beta1.yaml
@@ -12718,7 +12718,7 @@ spec:
             provisionerURL:
               type: string
             samples:
-              type: integer
+              type: string
             size:
               type: string
           type: object
