Add new testwick improvements and merge 2.0.1 chaos mesh

--- a/config/crd/bases/chaos-mesh.org_testwickchaos.yaml
+++ b/config/crd/bases/chaos-mesh.org_testwickchaos.yaml
@@ -211,6 +211,8 @@ spec:
                 type: string
               channelMessages:
                 type: string
+              channelMessagesSleep:
+                type: string
               channelSamples:
                 type: string
               dbType:
@@ -220,6 +222,10 @@ spec:
               hostedZone:
                 type: string
               owner:
+                type: string
+              provisionerImageName:
+                type: string
+              provisionerImageTag:
                 type: string
               provisionerURL:
                 type: string
