--- a/manifests/crd.yaml
+++ b/manifests/crd.yaml
@@ -12864,6 +12864,8 @@ spec:
                 type: string
               channelMessages:
                 type: string
+              channelMessagesSleep:
+                type: string
               channelSamples:
                 type: string
               dbType:
@@ -12873,6 +12875,10 @@ spec:
               hostedZone:
                 type: string
               owner:
+                type: string
+              provisionerImageName:
+                type: string
+              provisionerImageTag:
                 type: string
               provisionerURL:
                 type: string
